# sphinx-charts

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  mkver.conf  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
.github/workflows/: ci-test.yml  ci-version-check.yml
docs/: requirements.txt
docs/source/: conf.py  example_chapter.rst  index.rst  installation.rst  license.rst  quick_start.rst  version_history.rst
docs/source/charts/: test.json  test_bar_and_scatter_plot.json  validation_perry_marusic_12a.json  validation_perry_marusic_6b.json
docs/source/subdir_example/: subdir_example.rst
scripts/: mkdocs
sphinx_charts/: charts.css  charts.js  charts.py
tests/: test_chart_directive.py  test_example_module.py
tests/test_data/: test_data.json
{{library_name}}/: __init__.py  example_module.py  exceptions.py
